--- a/style.css
+++ b/style.css
@@ -116,6 +116,18 @@
   padding: 5px 10px;
   }
 
+  h3 {
+    color: #ff5757;
+    text-align: center;
+    position: relative;
+    }
 
+ p{
+  color: #0d0c0c;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+ }
 
   
